# sinapsi-converter

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
.opencode/command/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
docs/: DEVELOPMENT.md  development.md  uso.md
openspec/: AGENTS.md  project.md
openspec/specs/csv-parsing/: spec.md
openspec/specs/data-sorting/: spec.md
openspec/specs/dual-mode-ui/: spec.md
openspec/specs/packaging/: spec.md
openspec/specs/xlsx-output/: spec.md
scripts/: pyinstaller_entry.py
src/sinapsi_converter/: __init__.py  __main__.py  gui.py  models.py  parser.py  sorter.py  styles.py  writer.py
tests/: test_output_path.py  test_parser.py  test_sorter.py  test_writer.py
tests/fixtures/: RAW_report_9999_2026-01-15_10-00.csv
